examples/test/testpolicy8307.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8307
  namespace: namespace452
spec:
  podSelector:
    matchLabels:
      key44: value42
      key20: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value39
          key23: value49
      podSelector:
        matchLabels:
          key39: value42
